welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:33: error: not found: value i
}while(i != 6 && j != 6)	
       ^